<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.android.elliotmiller.nfl.MainActivity">
    <TextView
        style="@style/TextLabel"
        android:text="@string/select_teams"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinner_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spinner_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/results_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            style="@style/TextLabel"
            android:text="@string/quater_results"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Quarter 1 Result breakdown -->
                <TextView
                    android:text="@string/quarter_one"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_gravity="center_horizontal" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_team1_q1"
                        android:text="34"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/divider"/>
                    <TextView
                        android:id="@+id/tv_team2_q1"
                        android:text="15"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <!-- Quarter 2 Result breakdown -->
                <TextView
                    android:text="@string/quarter_two"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_gravity="center_horizontal" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_team1_q2"
                        android:text="37"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/divider"/>
                    <TextView
                        android:id="@+id/tv_team2_q22"
                        android:text="19"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <!-- Quarter 3 Result breakdown -->
                <TextView
                    android:text="@string/quarter_three"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_gravity="center_horizontal" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_team1_q3"
                        android:text="14"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/divider"/>
                    <TextView
                        android:id="@+id/tv_team2_q3"
                        android:text="45"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <!-- Quarter 4 Result breakdown -->
                <TextView
                    android:text="@string/quarter_four"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_team1_q4"
                        android:text="19"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/divider"/>
                    <TextView
                        android:id="@+id/tv_team2_q4"
                        android:text="19"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            style="@style/TextLabel"
            android:layout_marginTop="10dp"
            android:text="@string/final_result"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_team1_final_score"
                android:text="104"
                android:gravity="center"
                android:textSize="28sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/tv_team2_final_score"
                android:text="98"
                android:gravity="center"
                android:textSize="28sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_results"
        android:text="@string/did_not_play"
        android:visibility="gone"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
